code for tiles tours category done

--- a/dn-tours/index.html
+++ b/dn-tours/index.html
@@ -101,16 +101,101 @@
             <div class="row">
               <div class="col-md-12 text-right swipe-icons">
                 <a href="#" class="nav-link p-0">
-                  <img src="assets/img/nav-icons/move-left.svg">
+                  <i class="icofont-rounded-left"></i>
                 </a>
                 <a href="#" class="nav-link p-0">
-                  <img src="assets/img/nav-icons/move-right.svg">
+                  <i class="icofont-rounded-right"></i>
                 </a>
                 <a href="#" title="Show All" class="nav-link p-0 font-size-12 text-muted">Show All</a>
               </div>
-              <div class="col-md-4">one</div>
-              <div class="col-md-4">two</div>
-              <div class="col-md-4">three</div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/adevnture.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type">Love Adevnture ?</span>
+                    <span>
+                      Best Hikes Around the World
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/camping.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type">Camping ?</span>
+                    <span>
+                      Things to Know Before Going Camping
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/bicycle-tour.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type">Bicycle tours ?</span>
+                    <span>
+                      Best Bicycle tours
+                    </span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/adevnture.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type">Love Adevnture ?</span>
+                    <span>
+                      Best Hikes Around the World
+                    </span>
+                  </span>
+                </a>
+              </div>
+            </div>
+            <h3>Popular Destinations</h3>
+            <div class="row tour-by-destination">
+              <div class="col-md-12 text-right swipe-icons">
+                <a href="#" class="nav-link p-0">
+                  <i class="icofont-rounded-left"></i>
+                </a>
+                <a href="#" class="nav-link p-0">
+                  <i class="icofont-rounded-right"></i>
+                </a>
+                <a href="#" title="Show All" class="nav-link p-0 font-size-12 text-muted">Show All</a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/cappadocia.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type text-white text-bold">Cappadocia</span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/monaco.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type text-white">Monaco</span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/rome.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type text-white">Rome</span>
+                  </span>
+                </a>
+              </div>
+              <div class="col-md-3">
+                <a href="#" title="Love Adevnture ? Best Hikes Around the World" class="tour-category-tile position-relative">
+                  <img src="assets/img/tours-category/cappadocia.jpg">
+                  <span class="tour-decription">
+                    <span class="category-type text-white text-bold">Cappadocia</span>
+                  </span>
+                </a>
+              </div>
             </div>
           </div>
         </div>
