--- a/dn-tours/index.html
+++ b/dn-tours/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Designer Naruka Tours and Travel</title>
   <meta content="" name="descriptison">
   <meta content="" name="keywords">
 
@@ -113,44 +113,43 @@
                           <form action="forms/contact.php" method="post" role="form" class="php-email-form col-md-12">
                             <div class="form-row">
                               <div class="form-group col-md-12">
-                                <label for="name">From</label>
-                                <input type="text" name="name" class="form-control" id="name" data-rule="minlen:4" value="Starting From" data-msg="Please enter at least 4 chars" />
+                                <label for="starting from">From</label>
+                                <input type="text" name="starting from" class="form-control" id="starting from" data-rule="minlen:4" value="Starting From" data-msg="Please enter a valid Destination" />
                                 <div class="validate"></div>
                               </div>
                               <div class="form-group col-md-12">
-                                <label for="name">To</label>
-                                <input type="email" class="form-control" name="email" id="email" data-rule="email" value="Going to" data-msg="Please enter a valid email" />
+                                <label for="destination">To</label>
+                                <input type="text" class="form-control" name="destination" id="destination" data-rule="destination" value="Going to" data-msg="Please enter a valid Destination" />
+                                <div class="validate"></div>
+                              </div>
+                              <div class="form-group col-md-12">
+                                <div class="row">
+                                  <div class="col-md-6 border-right">
+                                    <label for="Select Date">Fly Out</label>
+                                    <input type="text" class="form-control" name="Select Date" id="Select Date" data-rule="Select Date" value="Going to" data-msg="Please enter a valid Select Date" />
+                                    <div class="validate"></div>
+                                  </div>
+                                  <div class="col-md-6">
+                                    <label for="Select Date">Fly Back</label>
+                                    <input type="text" class="form-control" name="Select Date" id="Select Date" data-rule="Select Date" value="Going to" data-msg="Please enter a valid Destination" />
+                                    <div class="validate"></div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="form-group col-md-12">
+                                <label for="passengers">Passengers</label>
+                                <input type="text" class="form-control" name="passengers" id="passengers" data-rule="passengers" value="2 Adults" data-msg="Please enter a Count of Traveller" />
                                 <div class="validate"></div>
                               </div>
                             </div>
-                            <div class="form-group">
-                              <label for="name">Subject</label>
-                              <input type="text" class="form-control" name="subject" id="subject" data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-                              <div class="validate"></div>
-                            </div>
-                            <div class="form-group">
-                              <label for="name">Message</label>
-                              <textarea class="form-control" name="message" rows="10" data-rule="required" data-msg="Please write something for us"></textarea>
-                              <div class="validate"></div>
-                            </div>
-                            <div class="mb-3">
-                              <div class="loading">Loading</div>
-                              <div class="error-message"></div>
-                              <div class="sent-message">Your message has been sent. Thank you!</div>
-                            </div>
-                            <div class="text-center"><button type="submit">Send Message</button></div>
+                            <div class="text-right"><button type="submit" class="btn btn-primary btn-md btn-round disabled">Search</button></div>
                           </form>
                         </div>
                         <div class="tab-pane fade" id="nav-profile" role="tabpanel" aria-labelledby="nav-profile-tab">second</div>
                       </div>
                     </div>
-
                   </div>
                 </div>
-                <div class="clearfix">
-                  <h2>Popular Flight Routes From </h2>
-                </div>
-                <div class="clearfix">third</div>
               </div>
             </div>
           </div>
